Huellas/force-app/main/default/objects/Mascota__c/Mascota__c.object-meta.xml
<CustomObject>
    <description>Información sobre las mascotas, utilizado para gestionar el registro y seguimiento de las mascotas en proceso de adopción.</description>
    <label>Mascota</label>
    <nameField>
        <label>Mascota</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mascotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>