Huellas/force-app/main/default/objects/Mascota__c/fields/Especie__c.field-meta.xml
<CustomField>
    <fullName>Especie__c</fullName>
    <description>Este campo indica la especie de la mascota.</description>
    <inlineHelpText>Seleccione la especie de la mascota (Perro o Gato).</inlineHelpText>
    <label>Especie</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perro</fullName>
            </value>
            <value>
                <fullName>Gato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>