Huellas/force-app/main/default/objects/Mascota__c/fields/Fecha_de_la_proxima_vacunacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_la_proxima_vacunacion__c</fullName>
    <description>Fecha calculada automáticamente para la próxima vacunación según la especie y la última vacunación.</description>
    <inlineHelpText>Calculada según la especie e intervalo de vacunación; requiere una última vacunación registrada.</inlineHelpText>
    <label>Fecha de la próxima vacunación</label>
    <type>Date</type>
</CustomField>