Huellas/force-app/main/default/objects/Mascota__c/fields/Fecha_de_la_ultima_vacunacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_la_ultima_vacunacion__c</fullName>
    <description>Este campo contiene la fecha de la última vacunación. Un disparador Apex rellenara la fecha de la última vacunación cuando un registro de &quot;Historial de vacunación&quot; se crea para la mascota.</description>
    <inlineHelpText>Se rellena cuando un registro de &quot;Historial de vacunación&quot; se crea para la mascota.</inlineHelpText>
    <label>Fecha de la última vacunación</label>
    <required>true</required>
    <type>Date</type>
</CustomField>