Huellas/force-app/main/default/objects/Mascota__c/fields/Needs_Vaccination__c.field-meta.xml
<CustomField>
    <fullName>Needs_Vaccination__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mascotas que necesitan vacunación.</description>
    <label>Necesita Vacunación</label>
    <type>Checkbox</type>
</CustomField>